initial_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zenyeradataprovider-1-0-5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zenyeradataprovider-1-0-5
  template:
    metadata:
      labels:
        app: zenyeradataprovider-1-0-5
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: zenyeradataprovider
          image: explodingsalad/zenyeradataprovider:1.0.5
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  if [ ! -f /tmp/healthy ]; then
                    echo "Liveness probe failed!"
                    exit 1
                  fi
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 1
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  if [ ! -f /tmp/ready ]; then
                    echo "Readiness probe failed!"
                    exit 1
                  fi
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 1
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - "touch /tmp/healthy; touch /tmp/ready"
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - "rm -f /tmp/healthy; rm -f /tmp/ready"
---
apiVersion: v1
kind: Service
metadata:
  name: zenyeradataprovider-1-0-5-service
spec:
  selector:
    app: zenyeradataprovider-1-0-5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: zenyeradataprovider-route
spec:
  to:
    kind: Service
    name: zenyeradataprovider-1-0-5-service
  port:
    targetPort: 8080
  wildcardPolicy: None
#---
#apiVersion: autoscaling/v2beta2
#kind: HorizontalPodAutoscaler
#metadata:
#  name: zenyeradataprovider-hpa
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: zenyeradataprovider
#  minReplicas: 1
#  maxReplicas: 3
#  metrics:
#    - type: Resource
#      resource:
#        name: cpu
#        target:
#          type: Utilization
#          averageUtilization: 50
#    - type: Resource
#      resource:
#        name: memory
#        target:
#          type: Utilization
#          averageUtilization: 70
